--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <link href="style.css" rel="stylesheet">
+    </head>
     <body>
             <h1><i>Новый год в Норвегии</i></h1>
             <p> Новый год в Норвегии встречается в ночь с 31 декабря на 1 января и входит в череду праздничных дней, которая длится с 25 декабря (Рождество) до 13 января (день святого Канута). Праздник обычно отмечается скромно (в отличие от более важного в европейских странах Рождества).</p>
